--- a/static/index.html
+++ b/static/index.html
@@ -34,56 +34,84 @@
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div class="project" id="project1">
-			<a href="" class="thumbnail">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Waiting in Line</p>
+			<a href="#">
+				<p class="project-title">Waiting in Line</p>
 			</a>
+			<div class="project-media">
+				<a href="" class="thumbnail">
+					<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image" class="img">
+				</a>
+				<p class="project-description">Description of project Waiting In Line.</p>
+			</div>
 		</div>
 		<div class="project" id="project2">
-			<a href="#" class="thumbnail">
-				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Needfinding</p>
-			</a>
+			<a href="#"><p class="project-title">Needfinding</p></a>
+			<div class="project-media">
+				<a href="#" class="thumbnail">
+					<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image" class="img">
+				</a>
+				<p class="project-description">Description of project Needfinding.</p>
+			</div>
 		</div>
 		<div class="project" id="project3">
-			<a href="#" class="thumbnail">
-				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Prototyping</p>
-			</a>
+			<a href="#"><p class="project-title">Prototyping</p></a>
+			<div class="project-media">
+				<a href="#" class="thumbnail">
+					<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image" class="img">
+				</a>
+				<p class="project-description">Description of project Prototyping.</p>
+			</div>
 		</div>
 		<div class="project" id="project4">
-			<a href="#" class="thumbnail">
-				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Heuristic Evaluation</p>
-			</a>
+			<a href="#"><p class="project-title">Heuristic Evaluation</p></a>
+			<div class="project-media">
+				<a href="#" class="thumbnail">
+					<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image" class="img">
+				</a>
+				<p class="project-description">Description of project Prototyping.</p>
+			</div>
 		</div>
 		<div class="project" id="project5">
-			<a href="#" class="thumbnail">
-				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Visualization</p>
-			</a>
+			<a href="#"><p class="project-title">Visualization</p></a>
+			<div class="project-media">
+				<a href="#" class="thumbnail">
+					<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image" class="img">
+				</a>
+				<p class="project-description">Description of project Visualization.</p>
+			</div>
 		</div>
 		<div class="project" id="project6">
-			<a href="#" class="thumbnail">
-				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Social design</p>
-			</a>
+			<a href="#"><p class="project-title">Social design</p></a>
+			<div class="project-media">
+				<a href="#" class="thumbnail">
+					<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image" class="img">
+				</a>
+				<p class="project-description">Description of project Social Design.</p>
+			</div>
 		</div>
 		<div class="project" id="project7">
-			<a href="#" class="thumbnail">
-				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Gestural interaction</p>
-			</a>
+			<a href="#"><p class="project-title">Gestural interaction</p></a>
+			<div class="project-media">
+				<a href="#" class="thumbnail">
+					<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image" class="img">
+				</a>
+				<p class="project-description">Description of project Gestural interaction.</p>
+			</div>
 		</div>
 		<div class="project" id="project8">
-			<a href="#" class="thumbnail">
-				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Design tools</p>
-			</a>
+			<a href="#"><p class="project-title">Design tools</p></a>
+			<div class="project-media">
+				<a href="#" class="thumbnail">
+					<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image" class="img">
+					<p>Design tools</p>
+					<p class="project-description">Description of project Design tools.</p>
+				</a>
+			</div>
 		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/introHCI.js"></script>
 </body>
 </html>
